compiler/test-data/parser/blueprint/errors/missing_opening_brace.frel
module blueprint.errors.missing_opening_brace

import test.blueprint

blueprint Hello
    text { "Hello" }
}
